@@ -1,5 +1,6 @@
 {{$NEXT}}
   - Use Getopt::Long::Modern
+  - Add warning when version is rewritten to a lower version
 
 0.001     2015-09-02 18:38:57 EDT
   - First release
